# vcs

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
cmd/: CMakeLists.txt  actions.cpp  actions.h  main.cpp
cmd/actions/: branch.cpp  commit.cpp  config.cpp  diff.cpp  dump.cpp  fetch.cpp  git.cpp  init.cpp  log.cpp  mount.cpp  remote.cpp  reset.cpp  restore.cpp  show.cpp  status.cpp  switch.cpp
cmd/local/: bare.cpp  bare.h  db.cpp  db.h  fetch.cpp  fetch.h  index.cpp  index.h  layout.h  revparse.cpp  revparse.h  status.h  workspace.cpp  workspace.h  worktree.cpp  worktree.h
cmd/ui/: color.cpp  color.h  colors.h  pager.cpp  pager.h  printer.cpp  printer.h
contrib/: CMakeLists.txt
contrib/acto/: .version  CMakeLists.txt
contrib/benchmark/: .version  CMakeLists.txt
contrib/cpp-httplib/: .version  CMakeLists.txt
contrib/cxxopts/: .version  CMakeLists.txt  cxxopts.hpp
contrib/flatbuffers/: .version  CMakeLists.txt
contrib/flatbuffers/src/: flatc_main.cpp  idl_gen_cpp.cpp
contrib/fmt/: .version  CMakeLists.txt
contrib/gdelta/: .version  CMakeLists.txt  gdelta.cpp  gdelta.h  gear_matrix.h
contrib/gtest/: CMakeLists.txt
contrib/json/: .version  CMakeLists.txt  nlohmann.hpp
contrib/leveldb/: .version  CMakeLists.txt
contrib/libfuse/: .version  CMakeLists.txt
contrib/libfuse/include/: fuse_config.h  libfuse_config.h
contrib/libgit2/: .version  CMakeLists.txt
contrib/libgit2/src/libgit2/: CMakeLists.txt
contrib/libgit2/src/util/: git2_features.h
contrib/liblmdb/: CMakeLists.txt
contrib/lz4/: .version  CMakeLists.txt
contrib/sha/: CMakeLists.txt  sha.c  sha1.h  sha256.h
contrib/sha/sha1/: sha1.c  sha1.h
contrib/sha/sha256/: sha256.c  sha256.h
contrib/snappy/: .version  CMakeLists.txt
contrib/subprocess/: .version  CMakeLists.txt  subprocess.hpp
contrib/subprocess/subprocess/: basic_types.hpp  environ.cpp  environ.hpp  pipe.cpp  pipe.hpp  pipe_var.hpp  process_builder.cpp  process_builder.hpp  process_builder_posix.cpp  process_builder_windows.cpp  shell_utils.cpp  shell_utils.hpp  utf8_to_utf16.cpp  utf8_to_utf16.hpp
contrib/tlsh/: .version  CMakeLists.txt
contrib/tlsh/include/: tlsh.h  tlsh_impl.h  tlsh_util.h
contrib/tlsh/src/: tlsh.cpp  tlsh_impl.cpp  tlsh_util.cpp
contrib/xxhash/: .version  CMakeLists.txt
src/: CMakeLists.txt
src/fs/: CMakeLists.txt
src/fs/linux/: db.cpp  db.h  fs.cpp  fs.h  meta.h  mount.cpp  mount.h
ut/: CMakeLists.txt  data_ut.cpp  hashid_ut.cpp  object_ut.cpp  ut_changelist.cpp  ut_config.cpp  ut_data.cpp  ut_hashid.cpp  ut_ignore.cpp  ut_object.cpp  ut_path.cpp  ut_revparse.cpp  ut_revwalk.cpp  ut_stage.cpp  ut_store.cpp  ut_utils.cpp
ut/lib/: graph.cpp  graph.h
util/: CMakeLists.txt  file.cpp  file.h  iterator.cpp  iterator.h  platform.h  split.cpp  split.h  stream.h  tty.cpp  tty.h  varint.h  wildmatch.cpp  wildmatch.h
vcs/: CMakeLists.txt  changelist.cpp  stage.cpp  stage.h
vcs/api/fbs/: commit.fbs  index.fbs  renames.fbs  tag.fbs  tree.fbs  types.fbs
vcs/changes/: change.h  changelist.cpp  changelist.h  path.cpp  path.h  revwalk.cpp  revwalk.h  stage.cpp  stage.h  status.h  validate.cpp  validate.h
vcs/common/: config.cpp  config.h  ignore.cpp  ignore.h
vcs/git/: converter.cpp  converter.h  types.h
vcs/object/: change.cpp  change.h  commit.cpp  commit.h  data.h  hashid.cpp  hashid.h  object.cpp  object.h  path.h  serialize.cpp  serialize.h  store.cpp  store.h
vcs/store/: collect.cpp  collect.h  disk.h  loose.cpp  loose.h  memory.cpp  memory.h  pack.cpp  pack.h
vcs/util/: CMakeLists.txt  arena.h  file.cpp  file.h  split.h
