add_subdirectory(acto)
add_subdirectory(cxxopts)
add_subdirectory(flatbuffers)
add_subdirectory(fmt)
add_subdirectory(json)
add_subdirectory(libfuse)
add_subdirectory(libgit2)
add_subdirectory(liblmdb)
add_subdirectory(lz4)
add_subdirectory(sha)
add_subdirectory(xxhash)

# Tests.
if(BUILD_TESTS)
    add_subdirectory(gtest)
    add_subdirectory(benchmark)
endif()
